--- a/WeRead.conf
+++ b/WeRead.conf
@@ -1,4 +1,4 @@
 hostname = i.weread.qq.com,101*.*.*,116.*.*.*,117.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*
 
 # > 微信读书(2022.01.16)
-^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://raw.githubusercontent.com/SaberWu/QuanX/main/WeRead.js
+^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://raw.githubusercontent.com/SaberWu/QuanX/main/WeRead.js?token=GHSAT0AAAAAABPS3VFA4TSKJWROHMHDGAZCYPEIJVA
