--- a/quantumult.conf
+++ b/quantumult.conf
@@ -69,6 +69,7 @@ https://ghproxy.com/https://raw.githubusercontent.com/DivineEngine/Profiles/mast
 https://ghproxy.com/https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter/China.list, tag=国内网站, force-policy=direct, update-interval=86400, opt-parser=false, enabled=true
 
 [rewrite_remote]
+https://raw.githubusercontent.com/SaberWu/QuanX/main/WeRead.conf?token=GHSAT0AAAAAABPS3VFB5P4BG265BW5UW7SWYPEIM3A, tag=微信读书破解, update-interval=86400, opt-parser=false, enabled=true
 # 注意，仅支持版本号16.2以下版本抖音，高版本抖音检测解密，有可能会出现黑屏问题，因此旧版本打勾，新版本不要打勾
 # 如想降级到16.2，ID为：842443730（使用降级软件或者ios越狱插件等都可以）
 https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/QuanX/main/rewrite/douyin.conf, tag=抖音净化（仅16.2以下）, update-interval=86400, opt-parser=false, enabled=false
@@ -146,6 +147,7 @@ shadowsocks=127.0.0.1:8080, method=aes-128-gcm, password=This_proxy_is_for_free,
 
 #本地分流
 [filter_local]
+host, qq.con, direct
 host, madou.club, 全球加速
 host, niaoyun.fun, 全球加速
 host, free.riyumi.xyz, 全球加速
