--- a/WeRead.conf
+++ b/WeRead.conf
@@ -1,4 +1,4 @@
-hostname = i.weread.qq.com,117.*.*.*
+hostname = i.weread.qq.com,117.*.*.*,183.*.*.*,121.*.*.*,10.*.*.*
 
 # > 微信读书(2022.01.16)
 ^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://raw.githubusercontent.com/SaberWu/QuanX/main/WeRead.js
