--- a/quantumult.conf
+++ b/quantumult.conf
@@ -201,7 +201,7 @@ ip-cidr,193.112.159.225/32,网易云音乐
 ip-cidr,223.252.199.66/32,网易云音乐
 ip-cidr,223.252.199.67/32,网易云音乐
 # Final
-final,全球加速
+final,direct
 
 #本地脚本
 [rewrite_local]
