日语迷修成Dot86订阅

--- a/quantumult.conf
+++ b/quantumult.conf
@@ -46,7 +46,7 @@ https://update.glados-config.com/quantumultx/54006/58e8938d63046603, tag=111, up
 https://niaocloud-rss.com/link/A0pGMwBrH3VInH2q?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=小鸟云, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Rookie.png, update-interval=172800, opt-parser=true, enabled=true
 http://yun.mooncloud.bike/link/ZiqofPQOy0K5bPrL?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=快乐学习加速器, update-interval=172800, opt-parser=true, enabled=false
 https://1rmb.tk/vmess/sub, tag=订阅④关注微信公众号：ios黑科技, update-interval=172800, opt-parser=true, enabled=true
-https://free.riyumi.xyz//link/NQG8KsaroAMPDdE4?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=日本迷, update-interval=172800, opt-parser=true, enabled=false
+https://sub.dot86.xyz/link/NQG8KsaroAMPDdE4?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=dot86, update-interval=172800, opt-parser=true, enabled=true
 https://a.luxury/link/4qdzwoPthmVn9hnV?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&out=几鸡+公益+捐赠+包括+套餐+中继中&replace=(tag.*)@$1，aead=false, tag=几鸡, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Guguex.png, update-interval=172800, opt-parser=true, enabled=true
 https://api.ikuuu.science/link/CwfIKDGC8lPDAewy?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=ikuuu, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Ywhl.png, update-interval=172800, opt-parser=true, enabled=true
 
