--- a/quantumult.conf
+++ b/quantumult.conf
@@ -330,7 +330,7 @@ https:\/\/ikuuu\.co url script-request-header https://raw.githubusercontent.com/
 */30 0-23 * * * https://ghproxy.com/https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/youth.js, tag=中青看点极速版, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true
 30 6 * * * https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, tag=中青看看赚, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true
 */30 9-22 * * * https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, tag=番茄小说, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/fqxs.png, enabled=false
-1 0 * * * https://ghproxy.com/https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=中国电信, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/10000.png, enabled=true
+1 0 * * * https://ghproxy.com/https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=中国电信, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/10000.png, enabled=false
 
 // Sub-Store
 0 12 * * * https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scripts/cron-sync-artifacts.js, tag=Sub-Store, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png, enabled=true
