--- a/quantumult.conf
+++ b/quantumult.conf
@@ -72,7 +72,8 @@ https://cdn.jsdelivr.net/gh/17mon/china_ip_list@master/china_ip_list.txt#type=ru
 https://gaoyifan.github.io/china-operator-ip/chinanet6.txt#type=rule, tag=ChinaIPv6, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 
 [rewrite_remote]
-https://raw.githubusercontents.com/yqc007/QuantumultX/master/Script/BiLiBiLiBVIPCrack.snippet
+https://xmkczs.com/quantumultX/ioshkj.conf, tag=69萝莉解锁会员, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontents.com/yqc007/QuantumultX/master/Script/BiLiBiLiBVIPCrack.snippet, tag=哔哩哔哩大会员, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/SaberWu/QuanX/main/QiMaoXiaoShuo.conf, tag=七猫小说破解, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/SaberWu/QuanX/main/WeRead.conf, tag=微信读书破解, update-interval=86400, opt-parser=false, enabled=true
 # 注意，仅支持版本号16.2以下版本抖音，高版本抖音检测解密，有可能会出现黑屏问题，因此旧版本打勾，新版本不要打勾
