--- a/quantumult.conf
+++ b/quantumult.conf
@@ -84,7 +84,7 @@ https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/QuanX/master/rewr
 https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/QuanX/master/rewrite/tiktokKR.conf, tag=tiktok解锁韩区（勿混用）, update-interval=86400, opt-parser=true, enabled=false
 https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/QuanX/master/rewrite/tiktokUS.conf, tag=tiktok解锁美区（勿混用）, update-interval=86400, opt-parser=true, enabled=true
 #boxjs规则，强烈建议保持开启
-https://ghproxy.com/https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.tf.conf, tag=BoxJs, update-interval=86400, opt-parser=true, enabled=true
 #比价格规则，根据需要选择是否开启
 https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/QuanX/master/rewrite/price.conf, tag=淘宝京东比价格, update-interval=86400, opt-parser=false, enabled=true
 #去广告类规则，建议保持开启，但抓取一些看广告得奖励cookie是要关闭
