--- a/quantumult.conf
+++ b/quantumult.conf
@@ -34,7 +34,7 @@ url-latency-benchmark=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan
 url-latency-benchmark=特殊, server-tag-regex=^((?!(专线|手游|游戏|香港|台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城|账号|试用|流量|电报|网址|最新|域名|剩余|(?i)IPLC|IEPL|game|States|American|Singapore|Japan|Korea|Hong|Taiwan|data|date|website)).)*$, check-interval=300, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/mona.png
 url-latency-benchmark=IPLC, server-tag-regex=(手游|游戏|专线|(?i)IPLC|IEPL|game), check-interval=300, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/shatang2.png
 static=苹果服务, direct, 美国, 香港, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/qiqi.png
-static=全球加速, proxy, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, direct, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/ganyu.png
+static=全球加速, proxy, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, direct, 全节点, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/ganyu.png
 static=港台番剧, direct, 香港, 台湾, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/diaona.png
 static=国际媒体, proxy, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, direct, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/qin.png
 static=声田音乐, proxy, 美国, 香港, 日本, direct, 台湾, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/beidou.png
