--- a/quantumult.conf
+++ b/quantumult.conf
@@ -47,7 +47,7 @@ https://yyds.fovi.tk/psboruc34813owyhr.html, tag=222, update-interval=172800, op
 https://update.glados-config.com/quantumultx/54006/58e8938d63046603, tag=111, update-interval=172800, opt-parser=true, enabled=true
 https://niaocloud-rss.com/link/A0pGMwBrH3VInH2q?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=小鸟云, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Rookie.png, update-interval=172800, opt-parser=true, enabled=true
 http://yun.mooncloud.bike/link/ZiqofPQOy0K5bPrL?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=快乐学习加速器, update-interval=172800, opt-parser=true, enabled=false
-https://1rmb.tk/vmess/sub, tag=订阅④关注微信公众号：ios黑科技, update-interval=172800, opt-parser=true, enabled=true
+https://qingyun123.com/api/v1/client/subscribe?token=dd79745cc3c1f8097c7064a2b8605f19, tag=qingyun123, update-interval=172800, opt-parser=true, enabled=true
 https://sub.dot86.xyz/link/NQG8KsaroAMPDdE4?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=dot86, update-interval=172800, opt-parser=true, enabled=true
 https://a.luxury/link/4qdzwoPthmVn9hnV?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&out=几鸡+公益+捐赠+包括+套餐+中继中&replace=(tag.*)@$1，aead=false, tag=几鸡, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Guguex.png, update-interval=172800, opt-parser=true, enabled=true
 https://api.ikuuu.science/link/CwfIKDGC8lPDAewy?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=ikuuu, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Ywhl.png, update-interval=172800, opt-parser=true, enabled=true
