--- a/quantumult.conf
+++ b/quantumult.conf
@@ -43,6 +43,7 @@ static=电报代理, proxy, direct, 新加坡, IPLC, 台湾, img-url=https://ghp
 static=黑白名单, proxy, direct, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/nvshi.png
 
 [server_remote]
+https://ikun.gay/api/v1/client/subscribe?token=d79b579a081c1997d5fd6444b0e48f59, tag=ikun, update-interval=172800, opt-parser=true, enabled=true
 https://yyds.fovi.tk/psboruc34813owyhr.html, tag=222, update-interval=172800, opt-parser=true, enabled=false
 https://update.glados-config.com/quantumultx/54006/58e8938d63046603, tag=111, update-interval=172800, opt-parser=true, enabled=false
 https://niaocloud-rss.com/link/A0pGMwBrH3VInH2q?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=小鸟云, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Rookie.png, update-interval=172800, opt-parser=true, enabled=false
