--- a/quantumult.conf
+++ b/quantumult.conf
@@ -51,6 +51,7 @@ https://qingyun123.com/api/v1/client/subscribe?token=dd79745cc3c1f8097c7064a2b86
 https://sub.dot86.xyz/link/NQG8KsaroAMPDdE4?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=dot86, update-interval=172800, opt-parser=true, enabled=true
 https://a.luxury/link/4qdzwoPthmVn9hnV?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&out=几鸡+公益+捐赠+包括+套餐+中继中&replace=(tag.*)@$1，aead=false, tag=几鸡, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Guguex.png, update-interval=172800, opt-parser=true, enabled=true
 https://api.ikuuu.science/link/CwfIKDGC8lPDAewy?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=ikuuu, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Ywhl.png, update-interval=172800, opt-parser=true, enabled=true
+https://ikun.gay/api/v1/client/subscribe?token=d79b579a081c1997d5fd6444b0e48f59, tag=ikun, update-interval=172800, opt-parser=true, enabled=true
 
 [filter_remote]
 https://ghproxy.com/https://raw.githubusercontent.com/SaberWu/QuanX/main/jiaoben/WeRead.list, tag=WeRead, force-policy=direct, update-interval=86400, opt-parser=false, enabled=true
