--- a/quantumult.conf
+++ b/quantumult.conf
@@ -23,7 +23,7 @@ address=/mtalk.google.com/108.177.125.188
 #选择本地节点中的网易云解锁灰色节点
 
 url-latency-benchmark=全节点, server-tag-regex=.*, check-interval=300, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/keli.png
-static=TikTok, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/diluke.png
+static=TikTok, proxy, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/diluke.png
 url-latency-benchmark=网易云音乐, 解锁节点一, 解锁节点二, 解锁节点三, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/wendi.png
 url-latency-benchmark=新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=300, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/keli.png
 url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=300, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/anbo.png
@@ -36,19 +36,19 @@ url-latency-benchmark=IPLC, server-tag-regex=(手游|游戏|专线|(?i)IPLC|IEPL
 static=苹果服务, direct, 美国, 香港, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/qiqi.png
 static=全球加速, proxy, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, direct, 全节点, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/ganyu.png
 static=港台番剧, direct, 香港, 台湾, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/diaona.png
-static=国际媒体, proxy, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, direct, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/qin.png
-static=声田音乐, proxy, 美国, 香港, 日本, direct, 台湾, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/beidou.png
-static=网飞影视, proxy, 新加坡, 香港, 台湾, direct, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/lisha.png
-static=电报代理, proxy, direct, 新加坡, IPLC, 台湾, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/ningguang.png
-static=黑白名单, proxy, direct, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/nvshi.png
+static=国际媒体, proxy, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, direct, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/qin.png
+static=声田音乐, proxy, 美国, 香港, 日本, direct, 台湾, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/beidou.png
+static=网飞影视, proxy, 新加坡, 香港, 台湾, direct, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/lisha.png
+static=电报代理, proxy, direct, 新加坡, IPLC, 台湾, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/ningguang.png
+static=黑白名单, proxy, direct, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/nvshi.png
 
 [server_remote]
 https://yyds.fovi.tk/psboruc34813owyhr.html, tag=222, update-interval=172800, opt-parser=true, enabled=false
 https://update.glados-config.com/quantumultx/54006/58e8938d63046603, tag=111, update-interval=172800, opt-parser=true, enabled=false
 https://niaocloud-rss.com/link/A0pGMwBrH3VInH2q?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=小鸟云, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Rookie.png, update-interval=172800, opt-parser=true, enabled=false
 http://yun.mooncloud.bike/link/ZiqofPQOy0K5bPrL?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=快乐学习加速器, update-interval=172800, opt-parser=true, enabled=false
-https://qingyun123.com/api/v1/client/subscribe?token=dd79745cc3c1f8097c7064a2b8605f19, tag=qingyun123, update-interval=172800, opt-parser=true, enabled=true
-https://sub.dot86.xyz/link/NQG8KsaroAMPDdE4?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=dot86, update-interval=172800, opt-parser=true, enabled=true
+https://qingyun123.com/api/v1/client/subscribe?token=dd79745cc3c1f8097c7064a2b8605f19, tag=qingyun123, update-interval=172800, opt-parser=true, enabled=false
+https://sub.dot86.xyz/link/NQG8KsaroAMPDdE4?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=dot86, update-interval=172800, opt-parser=true, enabled=false
 https://a.luxury/link/4qdzwoPthmVn9hnV?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&out=几鸡+公益+捐赠+包括+套餐+中继中&replace=(tag.*)@$1，aead=false, tag=几鸡, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Guguex.png, update-interval=172800, opt-parser=true, enabled=true
 https://api.ikuuu.science/link/CwfIKDGC8lPDAewy?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=ikuuu, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Ywhl.png, update-interval=172800, opt-parser=true, enabled=true
 https://ikun.gay/api/v1/client/subscribe?token=d79b579a081c1997d5fd6444b0e48f59, tag=ikun, update-interval=172800, opt-parser=true, enabled=true
