删除没用的订阅

--- a/quantumult.conf
+++ b/quantumult.conf
@@ -43,13 +43,9 @@ static=电报代理, proxy, direct, 新加坡, IPLC, 台湾, 全球加速, img-u
 static=黑白名单, proxy, direct, 美国, 新加坡, 日本, 韩国, 香港, 台湾, 特殊, IPLC, 全球加速, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxmini/icons/main/genshin/nvshi.png
 
 [server_remote]
-https://sspanel.oracleusa.ml/api/v1/client/subscribe?token=61e9c967ab470ad0d728ce3079cbf167&flag=v2ray, tag=免费机场, update-interval=172800, opt-parser=false, enabled=true
-https://drive.google.com/uc?export=download&id=17prs20AkU6iyyVq30ble7FTsWdNTUYey, tag=阿伟科技, update-interval=172800, opt-parser=false, enabled=true
-https://ednovas.design/vmess/sub, tag=2, update-interval=172800, opt-parser=true, enabled=true
-https://a.luxury/link/4qdzwoPthmVn9hnV?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&out=几鸡+公益+捐赠+包括+套餐+中继中&replace=(tag.*)@$1，aead=false, tag=几鸡, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Guguex.png, update-interval=172800, opt-parser=true, enabled=false
-https://api.ikuuu.science/link/CwfIKDGC8lPDAewy?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=ikuuu, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Ywhl.png, update-interval=172800, opt-parser=true, enabled=false
-https://ikun.gay/api/v1/client/subscribe?token=d79b579a081c1997d5fd6444b0e48f59, tag=ikun, update-interval=172800, opt-parser=true, enabled=true
-https://pool.jinxnet.xyz/vmess/sub, tag=免费, update-interval=172800, opt-parser=true, enabled=true
+
+https://a.luxury/link/4qdzwoPthmVn9hnV?list=quantumultx#info=1&emoji=2&udp=1&tfo=1&out=几鸡+公益+捐赠+包括+套餐+中继中&replace=(tag.*)@$1，aead=false, tag=几鸡, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Guguex.png, update-interval=172800, opt-parser=true, enabled=true
+https://api.ikuuu.science/link/CwfIKDGC8lPDAewy?sub=3&extend=1#info=1&emoji=2&udp=1&tfo=1&replace=(tag.*)@$1，aead=false, tag=ikuuu, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Ywhl.png, update-interval=172800, opt-parser=true, enabled=true
 
 [filter_remote]
 https://ghproxy.com/https://raw.githubusercontent.com/SaberWu/QuanX/main/jiaoben/WeRead.list, tag=WeRead, force-policy=direct, update-interval=86400, opt-parser=false, enabled=true
@@ -275,11 +271,6 @@ https:\/\/ikuuu\.co url script-request-header https://raw.githubusercontent.com/
 
 # 定时脚本任务
 [task_local]
-10 1-23 * * * https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/Youth_Read.js, tag=中青阅读自动阅读, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true
-*/30 0-23 * * * https://ghproxy.com/https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/youth.js, tag=中青看点极速版, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true
-30 6 * * * https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, tag=中青看看赚, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true
-*/30 9-22 * * * https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, tag=番茄小说, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/fqxs.png, enabled=false
-1 0 * * * https://ghproxy.com/https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=中国电信, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/10000.png, enabled=false
 
 // Sub-Store
 0 12 * * * https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scripts/cron-sync-artifacts.js, tag=Sub-Store, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png, enabled=true
