--- a/quantumult.conf
+++ b/quantumult.conf
@@ -135,6 +135,9 @@ https://raw.githubusercontent.com/ztxtop/x/main/rewrite-zqkkz.plugin, tag=中青
 https://raw.githubusercontent.com/yyn618/QuantumultX-Script/master/Script/TFDownload.conf, tag=TF区域解锁, update-interval=172800,opt-parser=true, enabled=true
 
 [server_local]
+
+http=jc.ap.fastqvpn.com:29980, username=442993652168396800, password=2ef91648-089f-4c81-b34d-06f072ec51dd, over-tls=true, tls13=false, fast-open=false, udp-relay=false, tag=一键连
+
 vmess=101.35.47.166:80, method=aes-128-gcm, password=a2d53eba-1e79-4cf2-97d6-85edcd1c2c6e, obfs=http, obfs-uri=/, fast-open=false, udp-relay=false, tag=上海IP001
 
 vmess=146.56.133.225:80, method=aes-128-gcm, password=9f48c80e-72a6-449a-9106-3ff480610469, obfs=http, obfs-uri=/, fast-open=false, udp-relay=false, tag=永久免费防失联-80端口
